updated receiver and storage services
